// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogPostAuthor renders author with an avatar, name and read time 1`] = `
<section
  className="jsx-1570869286"
>
  <div
    className="jsx-3469445345 avatar"
  >
    <img
      alt="The dashing Sir Bloblog avatar"
      className="jsx-1016004996"
      src="//i1-qa.adis.ws/i/bloblogltd/man-business-suit"
    />
  </div>
  <div
    className="jsx-1570869286 name"
  >
    Sir Bloblog
  </div>
  <div
    className="jsx-1570869286 date"
  >
    2019-08-14
  </div>
  <div
    className="jsx-1570869286 readTime"
  >
    15
     mins read
  </div>
</section>
`;

exports[`BlogPostAuthor renders author without an avatar, but still has name and read time 1`] = `
<section
  className="jsx-1570869286"
>
  <div
    className="jsx-1570869286 name"
  >
    Sir Bloblog
  </div>
  <div
    className="jsx-1570869286 date"
  >
    2019-08-14
  </div>
  <div
    className="jsx-1570869286 readTime"
  >
    15
     mins read
  </div>
</section>
`;
